# cuda-ising-metropolis

./: CMakeLists.txt  main.cpp  main_cpu.cpp  main_cpu.h  main_gpu.cu  main_gpu.cuh  save_map.py  save_plots.py  simulation.cpp  simulation.h  simulation_cpu.cpp  simulation_cpu.h  simulation_cpu_threads.cpp  simulation_cpu_threads.h  simulation_gpu.cpp  simulation_gpu.cu  simulation_gpu.h  simulation_gpu_cuda.cu  simulation_gpu_cuda.cuh
tests/: CMakeLists.txt  mre.cu  mre.cuh  mre_main.cpp  test_simulation.h  test_simulation_cpu.h  test_simulation_cpu_threads.h  test_simulation_gpu.h  test_simulation_gpu_cuda.h  tests.cpp  utils.h
